Fix: Tracks image overflow.

--- a/src/pages/Track/Track.scss
+++ b/src/pages/Track/Track.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 15rem;
   .content {
     z-index: 1;
     position: relative;
