--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -123,7 +123,7 @@
     }
   }
   .track {
-    margin-bottom: 50%;
+    // margin-bottom: 50%;
     .tracks {
       flex-direction: column;
       gap: 20px;
